Fix blockquote margin on mobile.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -268,6 +268,7 @@ article {
     background: var(--color-surface-variant);
     border-left: 0.25rem solid var(--color-on-surface-variant);
     padding: 0.25rem 1rem;
+    margin: 0rem;
   }
   table {
     margin: auto;
